--- a/css/styleBaseConocimientoTech.css
+++ b/css/styleBaseConocimientoTech.css
@@ -6,36 +6,44 @@ body {
     padding: 0;
     margin: 0;
     min-height: 100vh;
-    background: linear-gradient(black, #6A040F, #6A040F, #6A040F, #6A040F);
+    background-color: black; 
+    position: relative;
     display: flex;
     flex-direction: column;
+}
+
+.fondo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 40vh;
+    /* Combina el gradiente y la imagen en la misma propiedad background */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgb(106, 4, 15, 0.9)), url('../img/fondoperfil.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+}
+
+.main-container {
+    position: relative;
+    z-index: 1;
+    width: 100%;
 }
 
 .informacion {
     color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     width: 100%;
-}
-
-.imgFondo {
-    position: absolute;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    pointer-events: none;
-    z-index: -1;
-    opacity: 10%;
-    background-image: url('../img/fondoperfil.png');
-    width: 100%;
-    overflow: hidden;
-    height: 60vh;
+    height: 40vh; /* La altura debe coincidir con el div .fondo */
+    background: transparent;
 }
 
 .encabezado {
-    padding-top: 3%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -74,10 +82,10 @@ p {
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     padding: 20px;
-    margin-top: 30px;
+    margin-top: -30px;
     position: relative;
     box-shadow: 0 -5px 15px rgba(0,0,0,0.1);
-    z-index: 1;
+    z-index: 2;
     flex-grow: 1;
     overflow-y: auto;
     width: 100%;
@@ -90,7 +98,7 @@ p {
     padding-left: 20px;
     padding-right: 20px; 
     padding-top: 10%;
-    padding-bottom: 5rem;
+    padding-bottom: 3rem;
 }
 
 .menu {
@@ -106,11 +114,13 @@ p {
     padding: 0.5rem 0;
     z-index: 1000;
     background-color: #FBF6F6;
-    height: 30px;
+    height: 46.5px;
 }
 
 .menu img {
-    height: 18px;
+    height: 17px;
+    width: 18px;
+    margin-bottom: 6px;
 }
 
 .search-container {
@@ -154,7 +164,7 @@ p {
 }
 
 h2 {
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 .texto-encabezado img {
