--- a/css/ticketsDashboardTech.css
+++ b/css/ticketsDashboardTech.css
@@ -314,7 +314,7 @@ hr.dashed {
 
   .TicketPriority{
     font-size: 13px;
-    padding-right: 0px;
+    padding-right: px;
   }
 
   .description{
@@ -325,7 +325,7 @@ hr.dashed {
   font-size: 13px ;
   }
   .ticket-col2{
-    padding-left: 2px;
+    padding-left: 20px;
   }
 }
 
